add Pomodoro screen, change icons

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -1,77 +1,103 @@
 {
-    "language": "Language",
-    "en": "English",
-    "vi": "Vietnamese",
-    "accountSync": "Account sync",
-    "darkMode": "Dark mode",
-    "about": "About",
-    "settings": "Settings",
-    "syncRecord": "Sync Record",
-    "sync": "Sync",
-    "autoSync": "Auto Sync",
-    "enableAuto": "Enable automation backup to sync data across all your devices.",
-    "privacyPolicy": "Privacy Policy",
-    "temsService": "Tems of Service",
-    "checkUpdate": "Check Update",
-    "version": "Version",
-    "allReserved": "All rights reserved",
-    "today": "Today",
-    "tomorrow": "Tomorrow",
-    "sunday": "Sunday",
-    "monday": "Monday",
-    "tuesday": "Tuesday",
-    "wednesday": "Wednesday",
-    "thursday": "Thursday",
-    "friday": "Friday",
-    "saturday": "Saturday",
-    "update": "Update",
-    "addTask": "Add a task",
-    "title": "Title",
-    "description": "Description",
-    "category": "Category",
-    "alert": "Alert",
-    "home": "Home",
-    "categories": "Categories",
-    "rateThisApp": "Rate this app",
-    "contactUs": "Contact us",
-    "add": "Add",
-    "defaultCate": "Default categories",
-    "customCate": "Custom categories",
-    "cateName": "Category name",
-    "cateIcon": "Category icon",
-    "cateColor": "Category color",
-    "createCate": "Create category",
-    "overview": "Overview",
-    "completedTasks": "Completed Tasks",
-    "pendingTasks": "Pending Tasks",
-    "allTasksDone": "All tasks done to the processed.",
-    "in7Days": "In 7 days",
-    "in30Days": "In 30 days",
-    "all": "All",
-    "pendingTasksIn": "Pending Tasks in Categories",
-    "completionDailyTasks": "Completion of Daily Tasks",
-    "cancel": "Cancel",
-    "close": "Close",
-    "error": "Error",
-    "info": "Info",
-    "titleEmpty": "Title empty",
-    "descriptionEmpty": "Description empty",
-    "theStarting": "The starting time is less than the current time so there will be no reminder",
-    "delete": "Delete",
-    "edit": "Edit",
-    "areYouSureDelTask": "Are you sure to delete this task?",
-    "areYouSureDelCate": "Are you sure to delete this category?",
-    "toggleNotification": "Do you want to turn {{something}} notifications for this task?",
-    "on": "on",
-    "off": "off",
-    "editCate": "Edit category",
-    "color": "Color",
-    "icon": "Icon",
-    "manageCategories": "Manage categories",
-    "logout": "Logout",
-    "syncingData": "Syncing data",
-    "backupData": "Backup data",
-    "dataBackupSuccessful": "Data backup successful",
-    "backup": "Backup",
-    "backupRecord": "Backup record"
+  "language": "Language",
+  "en": "English",
+  "vi": "Vietnamese",
+  "accountSync": "Account sync",
+  "darkMode": "Dark mode",
+  "about": "About",
+  "settings": "Settings",
+  "syncRecord": "Sync Record",
+  "sync": "Sync",
+  "autoSync": "Auto Sync",
+  "enableAuto": "Enable automation backup to sync data across all your devices.",
+  "privacyPolicy": "Privacy Policy",
+  "temsService": "Tems of Service",
+  "checkUpdate": "Check Update",
+  "version": "Version",
+  "allReserved": "All rights reserved",
+  "today": "Today",
+  "tomorrow": "Tomorrow",
+  "sunday": "Sunday",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "update": "Update",
+  "addTask": "Add a task",
+  "title": "Title",
+  "description": "Description",
+  "category": "Category",
+  "alert": "Alert",
+  "home": "Home",
+  "categories": "Categories",
+  "rateThisApp": "Rate this app",
+  "contactUs": "Contact us",
+  "add": "Add",
+  "defaultCate": "Default categories",
+  "customCate": "Custom categories",
+  "cateName": "Category name",
+  "cateIcon": "Category icon",
+  "cateColor": "Category color",
+  "createCate": "Create category",
+  "overview": "Overview",
+  "completedTasks": "Completed Tasks",
+  "pendingTasks": "Pending Tasks",
+  "allTasksDone": "All tasks done to the processed.",
+  "in7Days": "In 7 days",
+  "in30Days": "In 30 days",
+  "all": "All",
+  "pendingTasksIn": "Pending Tasks in Categories",
+  "completionDailyTasks": "Completion of Daily Tasks",
+  "cancel": "Cancel",
+  "close": "Close",
+  "error": "Error",
+  "info": "Info",
+  "titleEmpty": "Title empty",
+  "descriptionEmpty": "Description empty",
+  "theStarting": "The starting time is less than the current time so there will be no reminder",
+  "delete": "Delete",
+  "edit": "Edit",
+  "areYouSureDelTask": "Are you sure to delete this task?",
+  "areYouSureDelCate": "Are you sure to delete this category?",
+  "toggleNotification": "Do you want to turn {{something}} notifications for this task?",
+  "on": "on",
+  "off": "off",
+  "editCate": "Edit category",
+  "color": "Color",
+  "icon": "Icon",
+  "manageCategories": "Manage categories",
+  "logout": "Logout",
+  "syncingData": "Syncing data",
+  "backupData": "Backup data",
+  "dataBackupSuccessful": "Data backup successful",
+  "backup": "Backup",
+  "backupRecord": "Backup record",
+  "pomodoroTitle": "📘 What is the Pomodoro Technique?",
+  "pomodoroIntro": "Pomodoro is a time management technique developed by Francesco Cirillo. It helps improve focus and reduce fatigue during work or study.",
+  "howItWorks": "⏱️ How it works:",
+  "howItWorksDetail": "- 1 Pomodoro = 25 minutes of focus\n- 5-minute short break after each Pomodoro\n- After 4 Pomodoros, take a long break of 15–30 minutes",
+  "benefits": "🎯 Benefits:",
+  "benefitsDetail": "- Helps maintain high concentration\n- Prevents burnout\n- Easy to track work progress",
+  "tips": "💡 Tips for using it effectively:",
+  "tipsDetail": "- Turn off distracting notifications\n- Write down random thoughts\n- Follow break times strictly",
+  "taskCompleted": "You're completed the task \"{{something}}\"",
+  "confirmExitTask": "Are you sure you want to exit this task?",
+  "selectTask": "Select Task",
+  "skipBreak": "Skip Break",
+  "startBreak": "Start Break",
+  "pause": "Pause",
+  "complete": "Complete",
+  "continue": "Continue",
+  "startToFocus": "Start to Focus",
+  "timerMode": "Timer Mode",
+  "noTasksToday": "No tasks available today",
+  "noSessions": "No sessions",
+  "sessions": "{{count}} session",
+  "sessions_plural": "{{count}} sessions",
+  "countdownDescription": "Countdown from 25 minutes until time runs out.",
+  "countupDescription": "Start counting from 0 until stopped manually.",
+  "shortBreak": "Short Break",
+  "longBreak": "Long Break"
 }
