--- a/src/i18n/translations/vi.json
+++ b/src/i18n/translations/vi.json
@@ -75,5 +75,31 @@
     "backupData": "Sao lưu dữ liệu",
     "dataBackupSuccessful": "Sao lưu dữ liệu thành công",
     "backup": "Sao lưu",
-    "backupRecord": "Bản ghi sao lưu"
+    "backupRecord": "Bản ghi sao lưu",
+    "pomodoroTitle": "📘 Phương pháp Pomodoro là gì?",
+    "pomodoroIntro": "Pomodoro là một kỹ thuật quản lý thời gian do Francesco Cirillo phát triển. Phương pháp này giúp tăng khả năng tập trung và giảm sự mệt mỏi trong quá trình làm việc hoặc học tập.",
+    "howItWorks": "⏱️ Cách hoạt động:",
+    "howItWorksDetail": "- 1 Pomodoro = 25 phút tập trung\n- Nghỉ ngắn 5 phút sau mỗi Pomodoro\n- Sau 4 Pomodoro, nghỉ dài 15–30 phút",
+    "benefits": "🎯 Lợi ích:",
+    "benefitsDetail": "- Giúp duy trì sự tập trung cao\n- Tránh làm việc quá sức\n- Dễ theo dõi tiến độ công việc",
+    "tips": "💡 Mẹo sử dụng hiệu quả:",
+    "tipsDetail": "- Tắt các thông báo gây phân tâm\n- Ghi chú lại những việc xuất hiện trong lúc làm\n- Tuân thủ nghiêm thời gian nghỉ ngắn",
+    "taskCompleted": "Bạn đã hoàn thành công việc \"{{something}}\"",
+    "confirmExitTask": "Bạn có chắc muốn thoát công việc này không?",
+    "selectTask": "Chọn công việc",
+    "skipBreak": "Bỏ qua nghỉ",
+    "startBreak": "Bắt đầu nghỉ",
+    "pause": "Tạm dừng",
+    "complete": "Hoàn thành",
+    "continue": "Tiếp tục",
+    "startToFocus": "Bắt đầu tập trung",
+    "timerMode": "Chế độ hẹn giờ",
+    "noTasksToday": "Không có công việc nào hôm nay",
+    "noSessions": "Chưa có lượt nào",
+    "sessions": "{{count}} lượt",
+    "sessions_plural": "{{count}} lượt",
+    "countdownDescription": "Đếm ngược từ 25 phút cho đến khi hết thời gian.",
+    "countupDescription": "Bắt đầu đếm từ 0 cho đến khi bạn dừng lại thủ công.",
+    "shortBreak": "Nghỉ ngắn",
+    "longBreak": "Nghỉ dài"
 }
