fix(pomodoro): remove seconds if hours present, stop timer on unmount, and add session-end notifications

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -140,5 +140,9 @@
   "deleteSuccess": "Delete done!",
   "updateSuccess": "Update done!",
   "addTaskSuccess": "Add new task done!",
-  "timeToWork": "It's time to do your task."
+  "timeToWork": "It's time to do your task.",
+  "focusSessionEnded": "⏰ Focus session ended!",
+  "breakSessionEnded": "☕ Break time ended!",
+  "timeToRest": "You can take a short rest.",
+  "timeToWork2": "Time to get back to work!"
 }
